fix: remove body jump, add scrollbar stable
- Fixed LoadingScreen animation's logic
- Lifted up motion.div from Screen to LoadingScreen

--- a/app/globals.css
+++ b/app/globals.css
@@ -261,6 +261,7 @@
 
 html {
 	scroll-behavior: smooth;
+	scrollbar-gutter: stable;
 }
 
 body {
